--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FancyBox HTML test</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css">
 </head>
 <body>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad animi aut autem beatae cupiditate distinctio dolorum eaque eius excepturi id illum impedit inventore magni modi molestiae nemo non pariatur perferendis, praesentium provident, quasi reiciendis repellendus similique sit temporibus, tenetur voluptas. Cum distinctio eius explicabo harum illo laudantium rem vero <a href="lorem-ipsum.pdf" data-fancybox>regulamin</a>.
+    <p>lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad animi aut autem beatae cupiditate distinctio
+        dolorum eaque eius excepturi id illum impedit inventore magni modi molestiae nemo non pariatur perferendis,
+        praesentium provident, quasi reiciendis repellendus similique sit temporibus, tenetur voluptas. Cum distinctio
+        eius explicabo harum illo laudantium rem vero
+        <a href="javascript:"
+           data-src="#doc"
+           data-fancybox>regulamin</a>.</p>
+    <iframe id="doc" src="lorem-ipsum.pdf" style="display: none;width: 95vw;height: 80vh;"></iframe>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
 </body>
